--- a/app_1/index.html
+++ b/app_1/index.html
@@ -8,7 +8,7 @@
 
 <body>
 
-	<h1>Hacker News Titles</h1>
+	<h1>Scrap</h1>
 	<button id="scrape-button">Scrape Titles</button>
 	<ul id="title-list">
 	</ul>
